--- a/arch/arm/boot/dts/Rhea_SS_Lucas.dts
+++ b/arch/arm/boot/dts/Rhea_SS_Lucas.dts
@@ -30,13 +30,13 @@
         0x00000427   /* 0x3500_4830: DMIC0CLK: GPIO123: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000443   /* 0x3500_4834: DMIC0DQ: GPIO124: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000443   /* 0x3500_4838: DSI0TE: GPIO37: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000143   /* 0x3500_483C: GPIO00: KEY_R0: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000143   /* 0x3500_4840: GPIO01: KEY_R1: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000143   /* 0x3500_4844: GPIO02: KEY_R2: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000143   /* 0x3500_4848: GPIO03: KEY_R3: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000143   /* 0x3500_484C: GPIO04: KEY_R4: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000143   /* 0x3500_4850: GPIO05: KEY_R5: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000143   /* 0x3500_4854: GPIO06: KEY_R6: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
+        0x0000014B   /* 0x3500_483C: GPIO00: KEY_R0: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 1 = Input Disabled: 011: 8mA */
+        0x0000014B   /* 0x3500_4840: GPIO01: KEY_R1: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 1 = Input Disabled: 011: 8mA */
+        0x0000014B   /* 0x3500_4844: GPIO02: KEY_R2: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 1 = Input Disabled: 011: 8mA */
+        0x0000014B   /* 0x3500_4848: GPIO03: KEY_R3: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 1 = Input Disabled: 011: 8mA */
+        0x0000014B   /* 0x3500_484C: GPIO04: KEY_R4: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 1 = Input Disabled: 011: 8mA */
+        0x0000014B   /* 0x3500_4850: GPIO05: KEY_R5: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 1 = Input Disabled: 011: 8mA */
+        0x0000014B   /* 0x3500_4854: GPIO06: KEY_R6: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 1 = Input Disabled: 011: 8mA */
         0x00000023   /* 0x3500_4858: GPIO07: GPIO07: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000123   /* 0x3500_485C: GPIO08: KEY_C0: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000123   /* 0x3500_4860: GPIO09: KEY_C1: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
