--- a/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
@@ -901,9 +901,9 @@ CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 # CONFIG_FB_DDC is not set
 # CONFIG_FB_BOOT_VESA_SUPPORT is not set
-CONFIG_FB_CFB_FILLRECT=y
-CONFIG_FB_CFB_COPYAREA=y
-CONFIG_FB_CFB_IMAGEBLIT=y
+# CONFIG_FB_CFB_FILLRECT is not set
+# CONFIG_FB_CFB_COPYAREA is not set
+# CONFIG_FB_CFB_IMAGEBLIT is not set
 # CONFIG_FB_CFB_REV_PIXELS_IN_BYTE is not set
 # CONFIG_FB_SYS_FILLRECT is not set
 # CONFIG_FB_SYS_COPYAREA is not set
@@ -933,7 +933,6 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_DISPLAY_SUPPORT is not set
 # CONFIG_TFT_PANEL is not set
 # CONFIG_LOGO is not set
-CONFIG_FB_BRCM_RHEA=y
 # CONFIG_FB_BRCM_ASYNC_UPDATE is not set
 # CONFIG_FB_BRCM_CP_CRASH_DUMP_IMAGE_SUPPORT is not set
 # CONFIG_FB_BRCM_ILI9486 is not set
