--- a/arch/arm/configs/bcm21654_rheastone_edn21_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn21_defconfig
@@ -95,7 +95,6 @@ CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 # CONFIG_NAMESPACES is not set
 # CONFIG_SCHED_AUTOGROUP is not set
-CONFIG_MM_OWNER=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -2105,7 +2104,7 @@ CONFIG_LOGO_LINUX_VGA16=y
 CONFIG_LOGO_LINUX_CLUT224=y
 CONFIG_FB_BRCM_RHEA=y
 # CONFIG_FB_BRCM_ASYNC_UPDATE is not set
-# CONFIG_FB_BRCM_CP_CRASH_DUMP_IMAGE_SUPPORT is not set
+CONFIG_FB_BRCM_CP_CRASH_DUMP_IMAGE_SUPPORT=y
 # CONFIG_FB_BRCM_ILI9486 is not set
 # CONFIG_LCD_ILI9486_SUPPORT is not set
 # CONFIG_LCD_R61531_SUPPORT is not set
