Rhea: Enable L2 cache prefetching by default on 1GHz reference platform.
[Defect / Enhancement / New Feature]
MobC00215990

[Problem]
Multimedia performance is affected by L2 cache prefetching being disabled.

[Solution]
Enable L2 cache prefetching.

[Reviewers]
<<BYPASS_CODE_REVIEW>>

[Testing]
    [Test Cases]

    [Label/CL# Synced To]

    [Platform]

[BROADCOM INTERNAL NOTES]

Change-Id: I137f757f0e15c7892111335e6d0db8feea0a927d
Signed-off-by: Tuukka Rouvinen <rouvinen@broadcom.com>

--- a/arch/arm/mach-rhea/Kconfig
+++ b/arch/arm/mach-rhea/Kconfig
@@ -153,6 +153,15 @@ config RHEA_DORMANT_MODE
        help
          Say Y if you want to enable dormant mode support for Rhea platform
 
+config RHEA_L2X0_PREFETCH
+	bool "Enable L2 cache prefetching for Rhea platform"
+	default n
+	help
+		Say Y if you want to enable L2 cache prefetching
+		for the Rhea platform. This enables both, data and
+		instruction prefetching that have been shown to improve
+		performance especially in multimedia use cases.
+
 config ROM_SEC_DISPATCHER
        bool "Enable secure calls to ROM"
        default n
