--- a/arch/arm/boot/dts/Rhea_SS_Lucas.dts
+++ b/arch/arm/boot/dts/Rhea_SS_Lucas.dts
@@ -54,13 +54,13 @@
         0x00000203   /* 0x3500_4890: GPIO21: UB2CTSN: 0 = TTL input: 0 = pull-down disabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000043   /* 0x3500_4894: GPIO22: GPIO22: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000043   /* 0x3500_4898: GPIO23: GPIO23: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000143   /* 0x3500_489C: GPIO24: GPIO24: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
+        0x00000003   /* 0x3500_489C: GPIO24: GPIO24: 0 = TTL input: 0 = pull-down disabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000043   /* 0x3500_48A0: GPIO25: GPIO25: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000043   /* 0x3500_48A4: GPIO26: GPIO26: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000043   /* 0x3500_48A8: GPIO27: GPIO27: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000043   /* 0x3500_48AC: GPIO28: GPIO28: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000003   /* 0x3500_48B0: GPIO32: GPIO32: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000023   /* 0x3500_48B4: GPIO33: GPIO33: 0 = TTL input: 0 = pull-down disbled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
+        0x00000003   /* 0x3500_48B4: GPIO33: GPIO33: 0 = TTL input: 0 = pull-down disbled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000023   /* 0x3500_48B8: GPIO34: GPIO34: 0 = TTL input: 0 = pull-down disbled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
 	0x00000443   /* 0x3500_48BC: GPS_CALREQ: GPIO99: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
 	0x00000443   /* 0x3500_48C0: GPS_HOSTREQ: GPIO100: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
@@ -69,12 +69,12 @@
         0x00000423   /* 0x3500_48CC: ICUSBDM: GPIO122: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 000: 2mA */
         0x00000443   /* 0x3500_48D0: ICUSBDP: GPIO121: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 000: 2mA */
         0x00000423   /* 0x3500_48D4: LCDCS0: GPIO38: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000423   /* 0x3500_48D8: LCDRES: GPIO41: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
+        0x00000403   /* 0x3500_48D8: LCDRES: GPIO41: 0 = TTL input: 0 = pull-down disabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000443   /* 0x3500_48DC: LCDSCL: GPIO39: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000443   /* 0x3500_48E0: LCDSDA: GPIO40: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000443   /* 0x3500_48E4: LCDTE: GPIO42: 0 = TTL input: 0 = pull-down disabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
+        0x00000403   /* 0x3500_48E4: LCDTE: GPIO42: 0 = TTL input: 0 = pull-down disabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000205   /* 0x3500_48E8: MDMGPIO00: GPEN00: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000423   /* 0x3500_48EC: MDMGPIO01: GPIO113: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
+        0x00000443   /* 0x3500_48EC: MDMGPIO01: GPIO113: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000205   /* 0x3500_48F0: MDMGPIO02: GPEN02: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000205   /* 0x3500_48F4: MDMGPIO03: GPEN14: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000205   /* 0x3500_48F8: MDMGPIO04: GPEN04: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
@@ -129,7 +129,7 @@
         0x00000203   /* 0x3500_49BC: GPIO93: SSP1CK: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 000: 2mA */
         0x00000203   /* 0x3500_49C0: GPIO94: SSP1SYN: 0 = TTL input: 1 = pull-down enabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 000: 2mA */
         0x00000043   /* 0x3500_49C4: SPI0CLK: SSP0CK: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
-        0x00000043   /* 0x3500_49C8: SPI0FSS: SSP0SYN: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
+        0x00000003   /* 0x3500_49C8: SPI0FSS: SSP0SYN: 0 = TTL input: 0 = pull-down disabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000043   /* 0x3500_49CC: SPI0RXD: SSP0DI: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000043   /* 0x3500_49D0: SPI0TXD: SSP0DO: 0 = TTL input: 0 = pull-down disabled: 1 = pull-up enabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
         0x00000003   /* 0x3500_49D4: SRI_C: SRI_C: 0 = TTL input: 0 = pull-down disabled: 0 = pull-up disabled: 0 = unslewed output: 0 = Input Enabled: 011: 8mA */
