--- a/arch/arm/configs/bcm21654_rheastone_edn21_tcl_sec_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn21_tcl_sec_defconfig
@@ -313,9 +313,9 @@ CONFIG_KONA_ATAG_DT_DTS_FILE="RheaStone_EDN20_assignments"
 CONFIG_PROC_PINMUX_DUMP=y
 # CONFIG_KONA_DT_BCMPMU is not set
 # CONFIG_KONA_PROFILER is not set
-CONFIG_KONA_USB_CONTROL=y
-CONFIG_KONA_CSL_CAMERA=y
-CONFIG_KONA_CHAL_CAMERA=y
+#CONFIG_KONA_USB_CONTROL=y
+#CONFIG_KONA_CSL_CAMERA=y
+#CONFIG_KONA_CHAL_CAMERA=y
 
 #
 # Rhea SoC based Machine types
@@ -2022,7 +2022,7 @@ CONFIG_SOC_CAMERA=y
 # CONFIG_SOC_CAMERA_IMX074 is not set
 # CONFIG_SOC_CAMERA_MT9M001 is not set
 # CONFIG_SOC_CAMERA_MT9M111 is not set
-# CONFIG_SOC_SUB_CAMERA is not set
+CONFIG_SOC_SUB_CAMERA=y
 # CONFIG_SOC_CAMERA_MT9T031 is not set
 # CONFIG_SOC_CAMERA_MT9T112 is not set
 # CONFIG_SOC_CAMERA_MT9V022 is not set
@@ -2036,6 +2036,8 @@ CONFIG_SOC_CAMERA=y
 # CONFIG_SOC_CAMERA_TCM9001 is not set
 CONFIG_SOC_CAMERA_OV5640=y
 # CONFIG_SOC_CAMERA_OV7692 is not set
+CONFIG_SOC_CAMERA_OV5640_GZ=y
+CONFIG_SOC_CAMERA_OV7692_GZ=y
 # CONFIG_SOC_CAMERA_OV6650 is not set
 # CONFIG_SOC_CAMERA_OV772X is not set
 # CONFIG_SOC_CAMERA_OV9640 is not set
