WLAN: BCM4334 Makefile correction to have the correct buildflags
[Defect / Enhancement / New Feature]
MobC00210220, MobC00223767, MobC00225235

[Problem]
Video playback glitches in concurrency scenarios

[Solution]
Add compile flag that prevents bussleep calls which are using up CPU
cycles without reason.

[Reviewers]
<<BYPASS_CODE_REVIEW>>

[Testing]
    [Test Cases]
Basic sanity and video streaming

    [Label/CL# Synced To]
Release 1.2.9

    [Platform]
RheaStone EDN20

[BROADCOM INTERNAL NOTES]

Change-Id: I509c5d8c7e1fd85fd57abe845d031b173d172daa

--- a/drivers/net/wireless/bcmdhd_4334/Makefile
+++ b/drivers/net/wireless/bcmdhd_4334/Makefile
@@ -14,7 +14,7 @@ DHDCFLAGS = -Wall -Wstrict-prototypes -Dlinux -DBCMDRIVER                     \
 #  -DENABLE_INSMOD_NO_FW_LOAD
 
 # distinguish between the 43xx chip
-ifeq ($(CONFIG_BCM4334),m)
+ifeq ($(CONFIG_BCMDHD_4334),m)
 DHDCFLAGS += -DBCM4334_CHIP -DHW_OOB -DBCM4334_CHECK_CHIP_REV
 DHDCFLAGS += -DUSE_CID_CHECK -DCONFIG_CONTROL_PM
 DHDCFLAGS += -DPROP_TXSTATUS
@@ -22,7 +22,7 @@ DHDCFLAGS += -DVSDB -DHT40_GO
 DHDCFLAGS += -DWL_CFG80211_VSDB_PRIORITIZE_SCAN_REQUEST
 DHDCFLAGS += -DDHD_USE_IDLECOUNT
 endif
-ifeq ($(CONFIG_BCM4334),y)
+ifeq ($(CONFIG_BCMDHD_4334),y)
 DHDCFLAGS += -DBCM4334_CHIP -DHW_OOB -DBCM4334_CHECK_CHIP_REV
 DHDCFLAGS += -DUSE_CID_CHECK -DCONFIG_CONTROL_PM
 DHDCFLAGS += -DPROP_TXSTATUS
