Rhea: Lucas: Floor current
[Defect / Enhancement / New Feature]
MobC00211786

[Problem]
Lucas 0.6 HW consumes 1 A in the deep sleep mode.

[Solution]
Enable an appropriate compilation flag to set the right PMU init value. This
change defines CONFIG_MACH_RHEA_SS_EMMC_EXTLDO.

[Reviewers]
Karl

[Testing]
    [Test Cases]
Measure current in sleep mode. It is around 1.2 mA.
    [Label/CL# Synced To]
CL429883

    [Platform]
android_rhea_ss_lucas_06
[BROADCOM INTERNAL NOTES]

Change-Id: I2123117c1e332d7bf2e91a00a5fd2562aed37cdb

--- a/arch/arm/mach-rhea/Kconfig
+++ b/arch/arm/mach-rhea/Kconfig
@@ -363,6 +363,12 @@ config 59055_SIM_EM_SHDWN
 	help
 	   For 59055 supported emergency sim shutdown
 
+config MACH_RHEA_SS_EMMC_EXTLDO
+	bool "Enable SS EMMC external LDO"
+	default y
+	help
+	   For SS EMMC memory external LDO
+
 endmenu
 
 
