MMDMA: Add support for MMDMA

--- a/arch/arm/configs/bcm21664_hawaii_peri_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_peri_fpga_defconfig
@@ -1260,9 +1260,12 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_TCG_TPM is not set
 # CONFIG_DCC_TTY is not set
 CONFIG_BRCM_CHAR_DRIVERS=y
+# CONFIG_V3D is not set
 CONFIG_BRCM_FUSE_LOG=y
 # CONFIG_STM_DEFAULT is not set
 CONFIG_BCM_CPDUMP_INIRQ=y
+# CONFIG_ISP is not set
+# CONFIG_MMDMA is not set
 CONFIG_BCM_AP_PANIC_ON_CPCRASH=y
 # CONFIG_BCM_AAA is not set
 CONFIG_BCM_BSC=y
