--- a/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
@@ -733,6 +733,7 @@ CONFIG_V3D=y
 # CONFIG_STM_DEFAULT is not set
 # CONFIG_BCM_CPDUMP_INIRQ is not set
 CONFIG_ISP=y
+# CONFIG_MMDMA is not set
 # CONFIG_BCM_AP_PANIC_ON_CPCRASH is not set
 # CONFIG_BCM_AAA is not set
 # CONFIG_BCM_BSC is not set
