--- a/drivers/char/broadcom/Kconfig
+++ b/drivers/char/broadcom/Kconfig
@@ -45,6 +45,12 @@ config UNICAM
 	depends on BRCM_CHAR_DRIVERS && (ARCH_RHEA)
 	default n
 
+config MMDMA
+	tristate "MMDMA Driver"
+	depends on BRCM_CHAR_DRIVERS && (ARCH_RHEA || ARCH_HAWAII)
+	select KONA_VC4LITE
+	default n
+
 config BCMPMU_RPC
 	bool "Support rpc with bcmpmu driver"
 	depends on BRCM_CHAR_DRIVERS
