--- a/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
@@ -292,6 +292,7 @@ CONFIG_BCM_RAM_START_RESERVED_SIZE=0x02000000
 # CONFIG_PROC_PINMUX_DUMP is not set
 # CONFIG_KONA_PROFILER is not set
 CONFIG_KONA_USB_CONTROL=y
+CONFIG_KONA_VC4LITE=y
 # CONFIG_RHEA_PWRMGR_USE_DUMMY_SEQ is not set
 # CONFIG_RHEALC_2093 is not set
 
@@ -733,7 +734,7 @@ CONFIG_V3D=y
 # CONFIG_STM_DEFAULT is not set
 # CONFIG_BCM_CPDUMP_INIRQ is not set
 CONFIG_ISP=y
-# CONFIG_MMDMA is not set
+CONFIG_MMDMA=y
 # CONFIG_BCM_AP_PANIC_ON_CPCRASH is not set
 # CONFIG_BCM_AAA is not set
 # CONFIG_BCM_BSC is not set
