--- a/drivers/gpu/ion/Kconfig
+++ b/drivers/gpu/ion/Kconfig
@@ -16,3 +16,9 @@ config ION_KONA
 	help
 	  Choose this option if you wish to use ion on a Broadcom Kona processor.
 
+config M4U
+	tristate "M4U for Broadcom Kona Processor"
+	depends on ARCH_HAWAII
+	help
+	  Choose this option if you wish to enable m4u support in a Broadcom Kona processor.
+
