--- a/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
@@ -1300,7 +1300,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 CONFIG_ARM_UNWIND=y
 CONFIG_DEBUG_USER=y
 CONFIG_DEBUG_LL=y
-CONFIG_EARLY_PRINTK=y
+# CONFIG_EARLY_PRINTK is not set
 # CONFIG_DEBUG_ICEDCC is not set
 # CONFIG_OC_ETM is not set
 
