--- a/arch/arm/configs/bcm21654_rhea_ss_zanin_02_defconfig
+++ b/arch/arm/configs/bcm21654_rhea_ss_zanin_02_defconfig
@@ -77,6 +77,7 @@ CONFIG_RCU_FANOUT=32
 CONFIG_IKCONFIG=y
 # CONFIG_IKCONFIG_PROC is not set
 CONFIG_LOG_BUF_SHIFT=19
+# CONFIG_LOGBUF_NONCACHE is not set
 # CONFIG_CGROUPS is not set
 # CONFIG_NAMESPACES is not set
 # CONFIG_SCHED_AUTOGROUP is not set
