--- a/arch/arm/configs/bcm21654_rheaberri_edn4x_defconfig
+++ b/arch/arm/configs/bcm21654_rheaberri_edn4x_defconfig
@@ -78,6 +78,7 @@ CONFIG_RCU_FANOUT=32
 CONFIG_IKCONFIG=y
 # CONFIG_IKCONFIG_PROC is not set
 CONFIG_LOG_BUF_SHIFT=19
+# CONFIG_LOGBUF_NONCACHE is not set
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 # CONFIG_CGROUP_FREEZER is not set
