--- a/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
@@ -894,8 +894,7 @@ CONFIG_REGULATOR_TPS728XX=y
 # Graphics support
 #
 # CONFIG_DRM is not set
-CONFIG_ION=y
-CONFIG_ION_KONA=y
+# CONFIG_ION is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
