Hawaii Bup: Update defconfig after reverting changes

--- a/arch/arm/configs/bcm21664_hawaii_fpga_e_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_fpga_e_defconfig
@@ -773,6 +773,7 @@ CONFIG_ANDROID_PMEM_LOW_MEMORY_KILLER=y
 # CONFIG_INTEL_MID_PTI is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_BRCM_VIRTUAL_SENSOR is not set
+# CONFIG_SENSORS_BMA222 is not set
 # CONFIG_UID_STAT is not set
 # CONFIG_BTHID is not set
 # CONFIG_APANIC is not set
@@ -1139,6 +1140,7 @@ CONFIG_VIDEO_V4L2=y
 #
 # CONFIG_DRM is not set
 # CONFIG_ION is not set
+# CONFIG_M4U is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
