--- a/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
@@ -571,6 +571,7 @@ CONFIG_ANDROID_PMEM_LOW_MEMORY_KILLER=y
 # CONFIG_INTEL_MID_PTI is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_BRCM_VIRTUAL_SENSOR is not set
+# CONFIG_SENSORS_BMA222 is not set
 # CONFIG_BMP18X is not set
 # CONFIG_TI_DAC7512 is not set
 # CONFIG_UID_STAT is not set
@@ -895,6 +896,7 @@ CONFIG_REGULATOR_TPS728XX=y
 #
 # CONFIG_DRM is not set
 # CONFIG_ION is not set
+# CONFIG_M4U is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
