--- a/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_mm_fpga_defconfig
@@ -895,7 +895,8 @@ CONFIG_REGULATOR_TPS728XX=y
 # Graphics support
 #
 # CONFIG_DRM is not set
-# CONFIG_ION is not set
+CONFIG_ION=y
+CONFIG_ION_KONA=y
 # CONFIG_M4U is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
