Hawaii Eve: Enable v3d, isp, mmdma, ion

--- a/arch/arm/configs/bcm21664_hawaii_fpga_e_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_fpga_e_defconfig
@@ -306,6 +306,7 @@ CONFIG_KONA_PMU_BSC_USE_PMGR_HW_SEM=y
 CONFIG_KONA_WFI_WORKAROUND=y
 # CONFIG_KONA_PROFILER is not set
 CONFIG_KONA_USB_CONTROL=y
+CONFIG_KONA_VC4LITE=y
 CONFIG_RHEA_PWRMGR_USE_DUMMY_SEQ=y
 # CONFIG_RHEALC_2093 is not set
 # CONFIG_RHEA_PI_MGR_DISABLE_POLICY_CHANGE is not set
@@ -976,12 +977,12 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_TCG_TPM is not set
 # CONFIG_DCC_TTY is not set
 CONFIG_BRCM_CHAR_DRIVERS=y
-# CONFIG_V3D is not set
+CONFIG_V3D=y
 CONFIG_BRCM_FUSE_LOG=y
 # CONFIG_STM_DEFAULT is not set
 CONFIG_BCM_CPDUMP_INIRQ=y
-# CONFIG_ISP is not set
-# CONFIG_MMDMA is not set
+CONFIG_ISP=y
+CONFIG_MMDMA=y
 CONFIG_BCM_AP_PANIC_ON_CPCRASH=y
 # CONFIG_BCM_AAA is not set
 CONFIG_BCM_BSC=y
@@ -1139,7 +1140,8 @@ CONFIG_VIDEO_V4L2=y
 # Graphics support
 #
 # CONFIG_DRM is not set
-# CONFIG_ION is not set
+CONFIG_ION=y
+CONFIG_ION_KONA=y
 # CONFIG_M4U is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
