Defconfigs: Update all broadcom defconfigs with Kconfig
[Defect / Enhancement / New Feature]
MobC00232313
 <<BYPASS_CCB_APPROVAL>>

[Problem]
NILL

[Solution]
NILL

[Reviewers]
NILL
 <<BYPASS_CODE_REVIEW>>

[Testing]
    [Test Cases]
NILL

    [Label/CL# Synced To]
sdb-rhea-android-ics/

    [Platform]
Rhea

[BROADCOM INTERNAL NOTES]

Change-Id: Ia3cf8751214a17dc981d05ce9e30dbbf8266bfb1

--- a/arch/arm/configs/bcm21654_rheastone_edn21_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn21_defconfig
@@ -363,6 +363,7 @@ CONFIG_CDEBUGGER=y
 # CONFIG_RHEA_PANDA is not set
 # CONFIG_RHEA_CLOVER_ICS is not set
 # CONFIG_59055_SIM_EM_SHDWN is not set
+CONFIG_MACH_RHEA_SS_EMMC_EXTLDO=y
 
 #
 # System MMU
@@ -1599,6 +1600,8 @@ CONFIG_I2C_HELPER_AUTO=y
 # CONFIG_I2C_STUB is not set
 CONFIG_I2C_BSC=y
 CONFIG_KONA_PMU_BSC_HS_MODE=y
+# CONFIG_KONA_PMU_BSC_HS_1MHZ is not set
+# CONFIG_KONA_PMU_BSC_HS_1625KHZ is not set
 # CONFIG_I2C_BRCM_SSPI is not set
 # CONFIG_I2C_DAC6571 is not set
 # CONFIG_I2C_DEBUG_CORE is not set
