--- a/arch/arm/configs/bcm21654_rhea_ss_zanin_02_defconfig
+++ b/arch/arm/configs/bcm21654_rhea_ss_zanin_02_defconfig
@@ -324,6 +324,7 @@ CONFIG_MACH_RHEA_SS_ZANIN_02=y
 # CONFIG_MACH_RHEA_SS_IVORY is not set
 CONFIG_RHEA_IGNORE_DAP_POWERUP_REQ=y
 CONFIG_RHEA_DORMANT_MODE=y
+# CONFIG_RHEA_L2X0_PREFETCH is not set
 CONFIG_ROM_SEC_DISPATCHER=y
 # CONFIG_ROM_SEC_DISPATCHER_LIB is not set
 CONFIG_ROM_SEC_DISPATCHER_SRC=y
@@ -350,6 +351,7 @@ CONFIG_RHEA_WA_HWJIRA_2747=y
 # CONFIG_RHEA_PANDA is not set
 # CONFIG_RHEA_CLOVER_ICS is not set
 # CONFIG_59055_SIM_EM_SHDWN is not set
+CONFIG_MACH_RHEA_SS_EMMC_EXTLDO=y
 
 #
 # System MMU
@@ -1338,6 +1340,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_BRCM_CHAR_DRIVERS=y
 CONFIG_V3D=y
 CONFIG_VCE=y
+# CONFIG_BCM_MMUTIL is not set
 CONFIG_BRCM_FUSE_LOG=y
 CONFIG_STM_DEFAULT=y
 # CONFIG_BCM_CPDUMP_INIRQ is not set
@@ -1407,6 +1410,8 @@ CONFIG_I2C_GPIO=y
 # CONFIG_I2C_STUB is not set
 CONFIG_I2C_BSC=y
 CONFIG_KONA_PMU_BSC_HS_MODE=y
+# CONFIG_KONA_PMU_BSC_HS_1MHZ is not set
+# CONFIG_KONA_PMU_BSC_HS_1625KHZ is not set
 # CONFIG_I2C_BRCM_SSPI is not set
 # CONFIG_I2C_DAC6571 is not set
 # CONFIG_I2C_DEBUG_CORE is not set
