--- a/arch/arm/configs/bcm21654_rhearay_edn1x_defconfig
+++ b/arch/arm/configs/bcm21654_rhearay_edn1x_defconfig
@@ -337,6 +337,7 @@ CONFIG_MACH_RHEA_RAY_EDN1X=y
 # CONFIG_MACH_RHEA_STONE_EDN2X is not set
 # CONFIG_RHEA_IGNORE_DAP_POWERUP_REQ is not set
 # CONFIG_RHEA_DORMANT_MODE is not set
+# CONFIG_RHEA_L2X0_PREFETCH is not set
 # CONFIG_ROM_SEC_DISPATCHER is not set
 # CONFIG_RHEA_DELAYED_PM_INIT is not set
 # CONFIG_RHEA_B0_PM_ASIC_WORKAROUND is not set
@@ -359,6 +360,7 @@ CONFIG_RHEA_UART_RX_FIX=y
 # CONFIG_RHEA_PANDA is not set
 # CONFIG_RHEA_CLOVER_ICS is not set
 # CONFIG_59055_SIM_EM_SHDWN is not set
+CONFIG_MACH_RHEA_SS_EMMC_EXTLDO=y
 
 #
 # System MMU
@@ -1405,6 +1407,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_BRCM_CHAR_DRIVERS=y
 CONFIG_V3D=y
 CONFIG_VCE=y
+# CONFIG_BCM_MMUTIL is not set
 CONFIG_BRCM_FUSE_LOG=y
 CONFIG_STM_DEFAULT=y
 # CONFIG_BCM_CPDUMP_INIRQ is not set
@@ -1473,6 +1476,8 @@ CONFIG_I2C_HELPER_AUTO=y
 # CONFIG_I2C_STUB is not set
 CONFIG_I2C_BSC=y
 CONFIG_KONA_PMU_BSC_HS_MODE=y
+# CONFIG_KONA_PMU_BSC_HS_1MHZ is not set
+# CONFIG_KONA_PMU_BSC_HS_1625KHZ is not set
 # CONFIG_I2C_BRCM_SSPI is not set
 # CONFIG_I2C_DAC6571 is not set
 # CONFIG_I2C_DEBUG_CORE is not set
