--- a/arch/arm/configs/bcm21654_rheastone_edn00_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn00_defconfig
@@ -336,6 +336,7 @@ CONFIG_MACH_RHEA_STONE=y
 # CONFIG_MACH_RHEA_STONE_EDN2X is not set
 CONFIG_RHEA_IGNORE_DAP_POWERUP_REQ=y
 CONFIG_RHEA_DORMANT_MODE=y
+# CONFIG_RHEA_L2X0_PREFETCH is not set
 CONFIG_ROM_SEC_DISPATCHER=y
 # CONFIG_ROM_SEC_DISPATCHER_LIB is not set
 CONFIG_ROM_SEC_DISPATCHER_SRC=y
@@ -362,6 +363,7 @@ CONFIG_CDEBUGGER=y
 # CONFIG_RHEA_PANDA is not set
 # CONFIG_RHEA_CLOVER_ICS is not set
 # CONFIG_59055_SIM_EM_SHDWN is not set
+CONFIG_MACH_RHEA_SS_EMMC_EXTLDO=y
 
 #
 # System MMU
@@ -1598,6 +1600,8 @@ CONFIG_I2C_HELPER_AUTO=y
 # CONFIG_I2C_STUB is not set
 CONFIG_I2C_BSC=y
 CONFIG_KONA_PMU_BSC_HS_MODE=y
+# CONFIG_KONA_PMU_BSC_HS_1MHZ is not set
+# CONFIG_KONA_PMU_BSC_HS_1625KHZ is not set
 # CONFIG_I2C_BRCM_SSPI is not set
 # CONFIG_I2C_DAC6571 is not set
 # CONFIG_I2C_DEBUG_CORE is not set
