--- a/arch/arm/configs/bcm21654_rheastone_edn20_tcl_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn20_tcl_defconfig
@@ -95,7 +95,6 @@ CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 # CONFIG_NAMESPACES is not set
 # CONFIG_SCHED_AUTOGROUP is not set
-CONFIG_MM_OWNER=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -337,6 +336,7 @@ CONFIG_ARCH_RHEA_BX=y
 CONFIG_MACH_RHEA_STONE_EDN2X=y
 CONFIG_RHEA_IGNORE_DAP_POWERUP_REQ=y
 CONFIG_RHEA_DORMANT_MODE=y
+# CONFIG_RHEA_L2X0_PREFETCH is not set
 CONFIG_ROM_SEC_DISPATCHER=y
 # CONFIG_ROM_SEC_DISPATCHER_LIB is not set
 CONFIG_ROM_SEC_DISPATCHER_SRC=y
@@ -363,6 +363,7 @@ CONFIG_CDEBUGGER=y
 # CONFIG_RHEA_PANDA is not set
 CONFIG_RHEA_CLOVER_ICS=y
 # CONFIG_59055_SIM_EM_SHDWN is not set
+CONFIG_MACH_RHEA_SS_EMMC_EXTLDO=y
 
 #
 # System MMU
@@ -1530,6 +1531,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_BRCM_CHAR_DRIVERS=y
 CONFIG_V3D=y
 CONFIG_VCE=y
+# CONFIG_BCM_MMUTIL is not set
 CONFIG_BRCM_FUSE_LOG=y
 # CONFIG_STM_DEFAULT is not set
 # CONFIG_BCM_CPDUMP_INIRQ is not set
@@ -1598,6 +1600,8 @@ CONFIG_I2C_HELPER_AUTO=y
 # CONFIG_I2C_STUB is not set
 CONFIG_I2C_BSC=y
 CONFIG_KONA_PMU_BSC_HS_MODE=y
+# CONFIG_KONA_PMU_BSC_HS_1MHZ is not set
+# CONFIG_KONA_PMU_BSC_HS_1625KHZ is not set
 # CONFIG_I2C_BRCM_SSPI is not set
 # CONFIG_I2C_DAC6571 is not set
 # CONFIG_I2C_DEBUG_CORE is not set
