--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1750,6 +1750,17 @@ config ARCH_SELECT_MEMORY_MODEL
 config HAVE_ARCH_PFN_VALID
 	def_bool ARCH_HAS_HOLES_MEMORYMODEL || !SPARSEMEM
 
+config ARCH_ENABLE_MEMORY_HOTPLUG
+        def_bool y
+
+config ARCH_ENABLE_MEMORY_HOTREMOVE
+        def_bool y
+        depends on MEMORY_HOTPLUG
+
+config ARCH_MEMORY_PROBE
+        def_bool y
+        depends on MEMORY_HOTPLUG
+
 config HIGHMEM
 	bool "High Memory Support"
 	depends on MMU
