Changes in the Gadget driver for 3.4 Kernel

--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -494,6 +494,32 @@ config USB_CI13XXX_MSM
 	  dynamically linked module called "ci13xxx_msm" and force all
 	  gadget drivers to also be dynamically linked.
 
+
+config USB_GADGET_DWC_OTG
+	boolean "Synopsys DWC_OTG 2.91a"
+	depends on ARCH_KONA
+	help
+	   This driver provides USB Device Controller driver for DW_OTG
+
+	   Say "y" to link the driver statically, or "m" to build a
+	   dynamically linked module called "dwc_otg" and to force all
+	   gadget drivers to also be dynamically linked.
+
+config USB_DWC_OTG_HOST_MODE
+	boolean "Synopsys DWC_OTG host mode"
+	depends on USB_GADGET_DWC_OTG
+	default n
+	help
+	   Say "y" to enable host mode by default. Say "n" to enable
+	   device mode by default.
+
+config USB_DWC_OTG
+	tristate
+	depends on USB_GADGET_DWC_OTG
+	default USB_GADGET
+	select USB_GADGET_SELECTED
+	select USB_GADGET_DUALSPEED
+
 #
 # LAST -- dummy/emulated controller
 #
@@ -535,6 +561,36 @@ config USB_GADGET_DUALSPEED
 config USB_GADGET_SUPERSPEED
 	bool
 	depends on USB_GADGET_DUALSPEED
+
+config USB_GADGET_SNPS_DWC_OTG
+	boolean "Synopsys Driver for DWC_otg Controller"
+	depends on USB && EXPERIMENTAL
+	select USB_OTG
+	select USB_GADGET_DUALSPEED
+	help
+	   Selects the Synopsys Driver for the DWC_otg Controller.
+
+config USB_LPM
+	boolean "Enable LPM support"
+	depends on USB && EXPERIMENTAL
+	default n
+	help
+	   Enables LPM support.
+
+config USB_DWC_OTG_LPM
+	boolean "Enable LPM support in DWC OTG driver"
+	depends on USB && EXPERIMENTAL
+	select USB_LPM
+	default n
+	help
+	   Enables LPM support in DWC OTG driver.
+
+config USB_DWC_OTG_DEVICE_ONLY
+	boolean "DWC OTG Driver device only mode"
+	depends on USB_GADGET
+	default n
+	help
+	   Enables DWC OTG Driver device only mode
 
 #
 # USB Gadget Drivers
