rheastone_edn20_defconfig: Disable BCM_KNLLOG_SUPPORT and L2 prefetch
Change-Id: Ib45cf0cfc31a7ce2693719bfc41f881b2a80ca29
Signed-off-by: Vinayak Menon <Vinayak.Menon@broadcom.com>

--- a/arch/arm/configs/bcm21654_rheastone_edn20_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn20_defconfig
@@ -95,7 +95,6 @@ CONFIG_BLK_CGROUP=y
 # CONFIG_CHECKPOINT_RESTORE is not set
 # CONFIG_NAMESPACES is not set
 # CONFIG_SCHED_AUTOGROUP is not set
-CONFIG_MM_OWNER=y
 # CONFIG_SYSFS_DEPRECATED is not set
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
@@ -360,6 +359,7 @@ CONFIG_ARCH_RHEA_BX=y
 CONFIG_MACH_RHEA_STONE_EDN2X=y
 CONFIG_RHEA_IGNORE_DAP_POWERUP_REQ=y
 CONFIG_RHEA_DORMANT_MODE=y
+# CONFIG_RHEA_L2X0_PREFETCH is not set
 CONFIG_ROM_SEC_DISPATCHER=y
 # CONFIG_ROM_SEC_DISPATCHER_LIB is not set
 CONFIG_ROM_SEC_DISPATCHER_SRC=y
@@ -386,6 +386,7 @@ CONFIG_CDEBUGGER=y
 # CONFIG_RHEA_PANDA is not set
 # CONFIG_RHEA_CLOVER_ICS is not set
 # CONFIG_59055_SIM_EM_SHDWN is not set
+CONFIG_MACH_RHEA_SS_EMMC_EXTLDO=y
 
 #
 # System MMU
@@ -443,8 +444,7 @@ CONFIG_ARM_ERRATA_754322=y
 CONFIG_ARM_GIC=y
 CONFIG_PL330=y
 # CONFIG_FIQ_DEBUGGER is not set
-CONFIG_BCM_KNLLOG_SUPPORT=y
-CONFIG_BCM_KNLLOG_IRQ=y
+# CONFIG_BCM_KNLLOG_SUPPORT is not set
 
 #
 # Bus support
@@ -1658,6 +1658,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_BRCM_CHAR_DRIVERS=y
 CONFIG_V3D=y
 CONFIG_VCE=y
+# CONFIG_BCM_MMUTIL is not set
 CONFIG_BRCM_FUSE_LOG=y
 # CONFIG_STM_DEFAULT is not set
 CONFIG_BCM_CPDUMP_INIRQ=y
