--- a/arch/arm/configs/bcm21654_rheastone_edn20_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn20_defconfig
@@ -1011,15 +1011,19 @@ CONFIG_BT_BNEP=y
 #
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
-# CONFIG_BT_HCIUART is not set
+CONFIG_BT_HCIUART=y
+# CONFIG_BT_HCIUART_H4 is not set
+# CONFIG_BT_HCIUART_BCSP is not set
+# CONFIG_BT_HCIUART_ATH3K is not set
+# CONFIG_BT_HCIUART_LL is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_HCIBFUSB is not set
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 # CONFIG_BCM_LPM_LDISC is not set
-# CONFIG_BT_HCIUART_BRCM is not set
-# CONFIG_BCM_BZHW is not set
+CONFIG_BT_HCIUART_BRCM=y
+CONFIG_BCM_BZHW=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
