Add Hawaii Garnet EDN020 [SoC] non-turbo variants
[Defect / Enhancement / New Feature]
MobC00386673

[Problem]
Add android_hawaii_garnet_edn020_soc_non_turbo and
android_hawaii_garnet_edn020_non_turbo variants

[Solution]
Added android_hawaii_garnet_edn020_soc_non_turbo and
android_hawaii_garnet_edn020_non_turbo variants based on
android_hawaii_garnet_edn020_soc and android_hawaii_garnet_edn020
variants, respectively, but with non-turbo CPU, MM, and DDR clock
speeds

[Reviewers]

[Testing]
    [Test Cases]
    Boot and check clock speeds

    [Label/CL# Synced To]
    Head

    [Platform]
    Hawaii Garnet EDN020 SoC
    Hawaii Garnet EDN020

[BROADCOM INTERNAL NOTES]

Change-Id: I0118fe4be6b9c630d039f6c3836996b34a1c219b
Signed-off-by: Edmund Szeto <eszeto@broadcom.com>
Reviewed-on: http://mps-gerrit.broadcom.com/48807
Branch-Open: Branch Status <branch_status_noreply@broadcom.com>
Reviewed-by: Commit Description Check <commit_desc_noreply@broadcom.com>
Reviewed-by: Checkpatch Status <checkpatch_status_noreply@broadcom.com>
Reviewed-by: Vikram Prakash <vikramp@broadcom.com>
Reviewed-by: Danesh Petigara <dpetigara@broadcom.com>
Tested-by: AutoSubmit Status <autosubmit_status_noreply@broadcom.com>
(cherry picked from commit 0fae1b07e15e15e947530321b3344ce0ddcd733b)
Reviewed-on: http://mps-gerrit.broadcom.com/51285
Reviewed-by: Srivathsa Parthasarathi <parthasa@broadcom.com>

--- a/arch/arm/mach-hawaii/Kconfig
+++ b/arch/arm/mach-hawaii/Kconfig
@@ -189,6 +189,15 @@ choice
 		Garnet
 		edn020
 
+	config MACH_HAWAII_GARNET_EDN020_NON_TURBO
+	bool "GARNET EDN020 Non-Turbo"
+	select RESERVED_MEM_SPEC1
+	help
+	  Support for
+		Hawaii based
+		Garnet
+		edn020_non_turbo
+
 	config MACH_HAWAII_GARNET_C_EDN020
 	bool "GARNET C_EDN020"
 	help
@@ -220,6 +229,14 @@ choice
 		Hawaii based
 		Garnet
 		edn020
+
+	config MACH_HAWAII_GARNET_EDN020_SOC_NON_TURBO
+	bool "GARNET EDN020_SOC Non-Turbo"
+	help
+	  Support for
+		Hawaii based
+		Garnet
+		edn020_soc_non_turbo
 
 	config MACH_HAWAII_GARNET_C_EDN020_SIMHOTSWAP
 	bool "GARNET C_EDN020_SIMHOTSWAP"
