--- a/arch/arm/boot/dts/java_c_lc1.dts
+++ b/arch/arm/boot/dts/java_c_lc1.dts
@@ -101,68 +101,28 @@
 		is-pmu-i2c = <0>;
 		fs-ref-frequency = <13000000>;
 		hs-ref-frequency = <104000000>;
-		mpu3050@68 {
-			compatible = "bcm,mpu3050";
-			reg = <0x68>;
-			gpio-irq-pin = <&gpio 33 0>;
-			int-config = <0x10>;
-			level-shifter = <0>;
-			orientation = <0 0xFFFFFFFF 0
-					0xFFFFFFFF 0 0
-					0 0 0xFFFFFFFF>;
-		};
-		akm8975@0c {
-			compatible = "bcm,akm8975";
-			reg = <0x0c>;
-			gpio-irq-pin = <&gpio 4 0>;
-			layout = <6>;
+
+		bma222_accl@18 {
+			compatible = "bcm,bma222_accl";
+			reg = <0x18>;
+			gpio-irq-pin = <0xFFFFFFFF>;
+			orientation  = <12>;
+
 		};
 
-		kxtik@0f {
-                        compatible = "bcm,kxtik";
-                        reg = <0x0f>;
-			/* Add gpio-irq-pin if using the same */
-                        min_interval = <5>;
-                        poll_interval = <200>;
-                        axis_map_x = <0>;
-                        axis_map_y = <1>;
-                        axis_map_z = <2>;
-                        negate_x = <1>;
-                        negate_y = <0>;
-                        negate_z = <1>;
-                        res_12bit = <64>;
-                        g_range = <0>;
-                };
-
-		tmd2771@39 {
-			compatible = "bcm,tmd2771";
-			reg = <0x39>;
+		isl290xx@44 {
+			compatible = "bcm,isl290xx";
+			reg = <0x44>;
 			gpio-irq-pin = <&gpio 89 0>;
-			calibrate_target_param = <300000>;
-			als_time_param = <200>;
-			scale_factor_param = <1>;
-			gain_trim_param = <512>;
-			filter_history_param = <3>;
-			filter_count_param = <1>;
-			gain_param = <2>;
-			prox_threshold_hi_param = <646>;
-			prox_threshold_lo_param = <638>;
-			als_threshold_hi_param = <1>;
-			als_threshold_lo_param = <0>;
-			prox_int_time_param = <238>;
-			prox_adc_time_param = <255>;
-			prox_wait_time_param = <238>;
-			prox_intr_filter_param = <17>;
-			prox_config_param = <0>;
-			prox_pulse_cnt_param = <96>;
-			prox_gain_param = <34>;
-			prox_win_sw = <100>;
-		};
-
-		bmp18x@77 {
-                         compatible = "bcm,bmp18x";
-                         reg = <0x77>;
-			 regulator-name = "cam2";
+			prox_threshold_hi_param = <112>;
+			prox_threshold_lo_param = <90>;
+			aps_config_param = <0xec>;
+			aps_config1_param = <0x87>;
+			aps_config2_param = <0x0>;
+			aps_intr_param = <0x20>;
+			prox_offset_param = <0>;
+			prox_boot_cali = <0>;
+			scale_factor = <1000>;
 		};
 	};
 
