--- a/arch/arm/configs/bcm23550_java_c_lc1_4Gb_defconfig
+++ b/arch/arm/configs/bcm23550_java_c_lc1_4Gb_defconfig
@@ -88,6 +88,7 @@ CONFIG_TICK_CPU_ACCOUNTING=y
 # RCU Subsystem
 #
 CONFIG_TREE_PREEMPT_RCU=y
+# CONFIG_TINY_RCU is not set
 CONFIG_PREEMPT_RCU=y
 CONFIG_RCU_STALL_COMMON=y
 # CONFIG_RCU_USER_QS is not set
@@ -217,6 +218,11 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_MODULE_SIG is not set
+# CONFIG_MODULE_SIG_SHA1 is not set
+# CONFIG_MODULE_SIG_SHA224 is not set
+# CONFIG_MODULE_SIG_SHA256 is not set
+# CONFIG_MODULE_SIG_SHA384 is not set
+# CONFIG_MODULE_SIG_SHA512 is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 # CONFIG_LBDAF is not set
@@ -254,6 +260,7 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_CFQ_GROUP_IOSCHED is not set
+# CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
@@ -699,6 +706,8 @@ CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
 # CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
@@ -962,6 +971,9 @@ CONFIG_IP6_NF_TARGET_NPT=y
 # CONFIG_BRIDGE_NF_EBTABLES is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
+# CONFIG_SCTP_DEFAULT_COOKIE_HMAC_MD5 is not set
+# CONFIG_SCTP_DEFAULT_COOKIE_HMAC_SHA1 is not set
+# CONFIG_SCTP_DEFAULT_COOKIE_HMAC_NONE is not set
 # CONFIG_RDS is not set
 # CONFIG_TIPC is not set
 # CONFIG_ATM is not set
@@ -1209,32 +1221,31 @@ CONFIG_BLK_DEV_CRYPTOLOOP=y
 # CONFIG_SENSORS_BRCM_VIRTUAL is not set
 # CONFIG_SENSORS_ISL29003 is not set
 # CONFIG_SENSORS_ISL29020 is not set
-# CONFIG_SENSORS_ISL290XX is not set
+CONFIG_SENSORS_ISL290XX=y
+CONFIG_SENSORS_ISL29147=y
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_MC3210 is not set
 # CONFIG_SENSORS_MXC622X is not set
 # CONFIG_SENSORS_LIS3DH is not set
-# CONFIG_SENSORS_BMA222 is not set
+CONFIG_SENSORS_BMA222=y
 # CONFIG_SENSORS_BH1780 is not set
 # CONFIG_SENSORS_BH1770 is not set
 # CONFIG_SENSORS_APDS990X is not set
 # CONFIG_SENSORS_HMC6352 is not set
 # CONFIG_SENSORS_AL3006 is not set
-CONFIG_SENSORS_TMD2771=y
+# CONFIG_SENSORS_TMD2771 is not set
 # CONFIG_SENSORS_STK31XX is not set
 # CONFIG_SENSORS_BH1721FVC is not set
 # CONFIG_SENSORS_RPR0410 is not set
 # CONFIG_SENSORS_RPR0521 is not set
 # CONFIG_SENSORS_HM8001 is not set
 # CONFIG_SENSORS_AP3216C is not set
-CONFIG_SENSORS_BMP18X=y
-CONFIG_SENSORS_BMP18X_I2C=y
-# CONFIG_SENSORS_BMP18X_SPI is not set
-CONFIG_SENSORS_KXTIK1004=y
+# CONFIG_SENSORS_BMP18X is not set
+# CONFIG_SENSORS_KXTIK1004 is not set
 # CONFIG_SENSORS_AMI306 is not set
 # CONFIG_SENSORS_AK8963 is not set
 # CONFIG_SENSORS_BMA2XX is not set
-CONFIG_SENSORS_AK8975=y
+# CONFIG_SENSORS_AK8975 is not set
 # CONFIG_SENSORS_ST480 is not set
 # CONFIG_SENSORS_GP2AP002 is not set
 # CONFIG_SENSORS_BMC150 is not set
@@ -2357,10 +2368,29 @@ CONFIG_SOC_CAMERA_OV7695=y
 # Flash lamp devices
 #
 CONFIG_VIDEO_FLASHLAMP=y
-# CONFIG_VIDEO_AS3643 is not set
-CONFIG_VIDEO_FLASH_GPIO=y
-CONFIG_VIDEO_FLASH_GPIO_EN=10
-CONFIG_VIDEO_FLASH_GPIO_MODE=11
+CONFIG_VIDEO_AS3643=y
+CONFIG_VIDEO_AS3643_STROBE=11
+CONFIG_VIDEO_AS3643_TXMASK=34
+# CONFIG_VIDEO_FLASH_GPIO is not set
+
+#
+# Camera sensors
+#
+# CONFIG_SOC_CAMERA_MAIN_S5K4ECGX is not set
+# CONFIG_SOC_CAMERA_SUB_S5K4ECGX is not set
+# CONFIG_SOC_CAMERA_MAIN_DB8V61M is not set
+# CONFIG_SOC_CAMERA_SUB_DB8V61M is not set
+# CONFIG_SOC_CAMERA_MAIN_SR130 is not set
+# CONFIG_SOC_CAMERA_SUB_SR130 is not set
+# CONFIG_SOC_CAMERA_MAIN_SR300PC20 is not set
+# CONFIG_SOC_CAMERA_SUB_SR300PC20 is not set
+# CONFIG_SOC_CAMERA_MAIN_SR030PC50 is not set
+# CONFIG_SOC_CAMERA_SUB_SR030PC50 is not set
+# CONFIG_SOC_CAMERA_MAIN_SR200PC20M is not set
+# CONFIG_SOC_CAMERA_SUB_SR200PC20M is not set
+# CONFIG_SOC_CAMERA_MAIN_SR352 is not set
+# CONFIG_SOC_CAMERA_SUB_SR352 is not set
+# CONFIG_SOC_CAMERA_POWER_USE_ASR is not set
 
 #
 # Camera sensors
@@ -3211,8 +3241,7 @@ CONFIG_IIO_CONSUMERS_PER_TRIGGER=2
 #
 # CONFIG_ADIS16400 is not set
 # CONFIG_ADIS16480 is not set
-CONFIG_INV_MPU_IIO=y
-# CONFIG_INV_IIO_MPU3050_ACCEL_SLAVE_BMA250 is not set
+# CONFIG_INV_MPU_IIO is not set
 
 #
 # Light sensors
