GPS : Adding Geofencing Kernel driver(inactive)
Signed-off-by: Jean Lee <leej@broadcom.com>

Change-Id:If5171345fa7b7d45d7e44a2c9e714a928220b4f9
Reviewed-on: http://mps-gerrit.broadcom.com/63477
Branch-Open: Branch Status <branch_status_noreply@broadcom.com>
Reviewed-by: Checkpatch Status <checkpatch_status_noreply@broadcom.com>
Reviewed-by: Commit Description Check <commit_desc_noreply@broadcom.com>
Reviewed-by: Edwin Chan <echan@broadcom.com>
Tested-by: AutoSubmit Status <autosubmit_status_noreply@broadcom.com>

--- a/arch/arm/boot/dts/hawaii_garnet_edn020_4Gb.dts
+++ b/arch/arm/boot/dts/hawaii_garnet_edn020_4Gb.dts
@@ -536,4 +536,14 @@
 			gpios = <&gpio 9 0>;
 		};
 	};
+
+	/*
+	This is sample , not actual GPIO assigned to GPS HostWake
+	bcm-gps {
+		compatible = "bcm,bcm-gps";
+		bcm-gps-hostwake = <&gpio 0 0>;
+		bcm-gps-regpu-gpio = <&gpio 11 0>;
+	};
+	*/
+
 };
