--- a/arch/arm/boot/dts/java_edn000_4Gb.dts
+++ b/arch/arm/boot/dts/java_edn000_4Gb.dts
@@ -632,4 +632,15 @@
 	secure_watchdog {
 		compatible = "bcm,secure_watchdog";
 	};
+
+
+	/*
+	This is sample , not actual GPIO assigned to GPS HostWake
+	bcm-gps {
+		compatible = "bcm,bcm-gps";
+		bcm-gps-hostwake = <&gpio 0 0>;
+		bcm-gps-regpu-gpio = <&gpio 11 0>;
+	};
+	*/
+
 };
