--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -123,3 +123,4 @@ obj-$(CONFIG_SRAM)		+= sram.o
 obj-$(CONFIG_SENSORS_BMA2XX)	+= bma2xx.o
 ccflags-$(CONFIG_SENSORS_BMA2XX_ENABLE_INT1)   += -DBMA2XX_ENABLE_INT1
 ccflags-$(CONFIG_SENSORS_BMA2XX_ENABLE_INT2)   += -DBMA2XX_ENABLE_INT2
+obj-$(CONFIG_BCM_GPS_KERNEL)    += bcm-gps.o
