Add Macro to align framebuffer
[Defect / Enhancement / New Feature]
MobC00399846
MobC00400139
MobC00400076

[Problem]
Phone's UI highly unstable  while powering on UE
when USB connected/charging.

[Solution]
As Raghu add need_page_alignment to decide whether page alignment has to
be done or not.After his modify,it is set to 0 in charger mode and don't
do page align in kernel. But we use our poweroff charging programme
instead of default,the need_page_alignment should be set to 1 in TK
project,so add a macro "CONFIG_FB_NEED_PAGE_ALIGNMENT" for TK project to
pass Raghu's modify.

[Reviewers]

[Testing]
    [Test Cases]
	Build and Test on javac_c_edn000_4Gb

    [Label/CL# Synced To]

    [Platform]
	Java/Hawaii

Change-Id: I20e196bd9dc1ad5030e23cf214d30a4c2411e655
Signed-off-by: yuxiang <yuxiang@broadcom.com>
Reviewed-on: http://mps-gerrit.broadcom.com/63399
Reviewed-by: Frank (Jianxin) Du <frankdu@broadcom.com>
Reviewed-by: Raghu MJ <raghumj@broadcom.com>
Reviewed-by: Vinay Krishnamurthy <vinayk@broadcom.com>
Reviewed-by: Yu Xiao <yuxiao@broadcom.com>
Branch-Open: Branch Status <branch_status_noreply@broadcom.com>
Reviewed-by: Checkpatch Status <checkpatch_status_noreply@broadcom.com>
Reviewed-by: Commit Description Check <commit_desc_noreply@broadcom.com>
Tested-by: AutoSubmit Status <autosubmit_status_noreply@broadcom.com>

--- a/arch/arm/configs/bcm21654_rheastone_edn20_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn20_defconfig
@@ -1631,10 +1631,12 @@ CONFIG_TOUCHSCREEN_TANGO=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_MMS134S is not set
 # CONFIG_TOUCHSCREEN_IST30XX is not set
+# CONFIG_TOUCHSCREEN_IST30XX_NEW is not set
 # CONFIG_TOUCHSCREEN_ICN83XX is not set
 # CONFIG_TOUCHSCREEN_MSG21XX is not set
 # CONFIG_KEYBOARD_CYPRESS_TOUCH is not set
 # CONFIG_KEYBOARD_TC360L_TOUCHKEY is not set
+# CONFIG_TOUCHSCREEN_MELFAS_MMS144 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2284,6 +2286,7 @@ CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_LM3630 is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
 # CONFIG_BACKLIGHT_LP855X is not set
+# CONFIG_BACKLIGHT_SGM3727 is not set
 CONFIG_LOGO=y
 CONFIG_LOGO_LINUX_MONO=y
 CONFIG_LOGO_LINUX_VGA16=y
@@ -2302,6 +2305,7 @@ CONFIG_FB_BRCM_KONA=y
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
 # CONFIG_DSI_PKT_VID_SIMULTANEOUS is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
