--- a/arch/arm/configs/bcm21664_hawaii_garnet_c_edn010_debug_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_garnet_c_edn010_debug_defconfig
@@ -2357,6 +2357,7 @@ CONFIG_FB_BRCM_CP_CRASH_DUMP_IMAGE_SUPPORT=y
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
 # CONFIG_DSI_PKT_VID_SIMULTANEOUS is not set
+CONFIG_FB_NEED_PAGE_ALIGNMENT=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
