--- a/arch/arm/configs/bcm21664_hawaii_peri_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_peri_fpga_defconfig
@@ -2034,6 +2034,7 @@ CONFIG_LOGO_LINUX_CLUT224=y
 # CONFIG_LCD_NT35512_SUPPORT is not set
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
