--- a/arch/arm/configs/bcm21664_hawaii_usb_fpga_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_usb_fpga_defconfig
@@ -1224,6 +1224,7 @@ CONFIG_FB=y
 # CONFIG_LCD_NT35512_SUPPORT is not set
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_SOUND is not set
 
 #
