--- a/arch/arm/configs/bcm23550_java_ss_victor3g_rev00_defconfig
+++ b/arch/arm/configs/bcm23550_java_ss_victor3g_rev00_defconfig
@@ -332,6 +332,7 @@ CONFIG_BRD_NAME="java_ss_victor3g"
 # CONFIG_MACH_JAVA_STONE is not set
 # CONFIG_MACH_JAVA_GARNET is not set
 # CONFIG_MACH_JAVA_KIVU is not set
+# CONFIG_MACH_JAVA_BROOKS is not set
 # CONFIG_MACH_JAVA_SS_EVAL is not set
 CONFIG_MACH_JAVA_SS_VICTOR3G=y
 # CONFIG_MACH_JAVA_SS_BAFFINLITE is not set
@@ -2430,6 +2431,7 @@ CONFIG_FB_BRCM_KONA=y
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
 # CONFIG_DSI_PKT_VID_SIMULTANEOUS is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
