--- a/arch/arm/configs/bcm21654_rhearay_edn3x_row_defconfig
+++ b/arch/arm/configs/bcm21654_rhearay_edn3x_row_defconfig
@@ -1540,10 +1540,12 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_MMS134S is not set
 # CONFIG_TOUCHSCREEN_IST30XX is not set
+# CONFIG_TOUCHSCREEN_IST30XX_NEW is not set
 # CONFIG_TOUCHSCREEN_ICN83XX is not set
 # CONFIG_TOUCHSCREEN_MSG21XX is not set
 # CONFIG_KEYBOARD_CYPRESS_TOUCH is not set
 # CONFIG_KEYBOARD_TC360L_TOUCHKEY is not set
+# CONFIG_TOUCHSCREEN_MELFAS_MMS144 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2181,6 +2183,7 @@ CONFIG_LOGO_LINUX_CLUT224=y
 # CONFIG_LCD_NT35512_SUPPORT is not set
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
