--- a/arch/arm/configs/bcm21654_rheastone_edn21_4752_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn21_4752_defconfig
@@ -1628,10 +1628,12 @@ CONFIG_TOUCHSCREEN_TANGO=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_MMS134S is not set
 # CONFIG_TOUCHSCREEN_IST30XX is not set
+# CONFIG_TOUCHSCREEN_IST30XX_NEW is not set
 # CONFIG_TOUCHSCREEN_ICN83XX is not set
 # CONFIG_TOUCHSCREEN_MSG21XX is not set
 # CONFIG_KEYBOARD_CYPRESS_TOUCH is not set
 # CONFIG_KEYBOARD_TC360L_TOUCHKEY is not set
+# CONFIG_TOUCHSCREEN_MELFAS_MMS144 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2278,6 +2280,7 @@ CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_LM3630 is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
 # CONFIG_BACKLIGHT_LP855X is not set
+# CONFIG_BACKLIGHT_SGM3727 is not set
 CONFIG_LOGO=y
 CONFIG_LOGO_LINUX_MONO=y
 CONFIG_LOGO_LINUX_VGA16=y
@@ -2294,6 +2297,7 @@ CONFIG_LOGO_LINUX_CLUT224=y
 # CONFIG_LCD_NT35512_SUPPORT is not set
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
