--- a/arch/arm/configs/bcm21654_rheastone_edn21_tcl_sl_defconfig
+++ b/arch/arm/configs/bcm21654_rheastone_edn21_tcl_sl_defconfig
@@ -1621,11 +1621,13 @@ CONFIG_TOUCHSCREEN_FT5306=y
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_MMS134S is not set
 # CONFIG_TOUCHSCREEN_IST30XX is not set
+# CONFIG_TOUCHSCREEN_IST30XX_NEW is not set
 # CONFIG_TOUCHSCREEN_ICN83XX is not set
 # CONFIG_TOUCHSCREEN_JAVA_AMETHYST_FT5336_FW is not set
 # CONFIG_TOUCHSCREEN_MSG21XX is not set
 # CONFIG_KEYBOARD_CYPRESS_TOUCH is not set
 # CONFIG_KEYBOARD_TC360L_TOUCHKEY is not set
+# CONFIG_TOUCHSCREEN_MELFAS_MMS144 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2271,6 +2273,7 @@ CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_LM3630 is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
 # CONFIG_BACKLIGHT_LP855X is not set
+# CONFIG_BACKLIGHT_SGM3727 is not set
 CONFIG_LOGO=y
 CONFIG_LOGO_LINUX_MONO=y
 CONFIG_LOGO_LINUX_VGA16=y
@@ -2287,6 +2290,7 @@ CONFIG_LOGO_LINUX_CLUT224=y
 # CONFIG_LCD_NT35512_SUPPORT is not set
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
