--- a/arch/arm/configs/bcm21664_hawaii_garnet_edn020_soc_4Gb_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_garnet_edn020_soc_4Gb_defconfig
@@ -559,6 +559,7 @@ CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
+# CONFIG_FRONTSWAP is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
@@ -2500,6 +2501,7 @@ CONFIG_FB_BRCM_KONA=y
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
 # CONFIG_DSI_PKT_VID_SIMULTANEOUS is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
@@ -3684,6 +3686,8 @@ CONFIG_LIBCRC32C=y
 CONFIG_AUDIT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
+CONFIG_LZO_COMPRESS=y
+CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
