--- a/arch/arm/configs/bcm21664_hawaii_ss_heat3g_rev00_defconfig
+++ b/arch/arm/configs/bcm21664_hawaii_ss_heat3g_rev00_defconfig
@@ -2455,6 +2455,7 @@ CONFIG_LCD_NT35510_SUPPORT=y
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
 # CONFIG_DSI_PKT_VID_SIMULTANEOUS is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_FB_SSD1307 is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
