--- a/arch/arm/configs/bcm23550_java_ss_eval_rev00_secureOS_defconfig
+++ b/arch/arm/configs/bcm23550_java_ss_eval_rev00_secureOS_defconfig
@@ -329,6 +329,7 @@ CONFIG_BRD_NAME="java_ss_eval"
 # CONFIG_MACH_JAVA_STONE is not set
 # CONFIG_MACH_JAVA_GARNET is not set
 # CONFIG_MACH_JAVA_KIVU is not set
+# CONFIG_MACH_JAVA_BROOKS is not set
 CONFIG_MACH_JAVA_SS_EVAL=y
 # CONFIG_MACH_JAVA_SS_VICTOR3G is not set
 # CONFIG_MACH_JAVA_SS_BAFFINLITE is not set
@@ -2272,6 +2273,7 @@ CONFIG_FB_BRCM_KONA=y
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
 # CONFIG_DSI_PKT_VID_SIMULTANEOUS is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
