--- a/arch/arm/configs/bcm2835_defconfig
+++ b/arch/arm/configs/bcm2835_defconfig
@@ -1075,6 +1075,7 @@ CONFIG_BCMA_POSSIBLE=y
 # CONFIG_LCD_NT35512_SUPPORT is not set
 # CONFIG_FB_BRCM_LCD_EXIST_CHECK is not set
 # CONFIG_LDI_MDNIE_SUPPORT is not set
+# CONFIG_FB_NEED_PAGE_ALIGNMENT is not set
 # CONFIG_SOUND is not set
 
 #
