dts: correct total available memory for kernel
Below build variants' defconfigs are using CP with 30MB.
So correct total available memory from 480 tp 482.

Change-Id: Ida13d0e86891d89d45fd007dc068d5ed1504f3b4
Signed-off-by: Tommy Choi <tommy.choi@broadcom.com>
Reviewed-on: http://mps-gerrit.broadcom.com/63486
Branch-Open: Branch Status <branch_status_noreply@broadcom.com>
Reviewed-by: Checkpatch Status <checkpatch_status_noreply@broadcom.com>
Reviewed-by: Commit Description Check <commit_desc_noreply@broadcom.com>
Reviewed-by: Danny Yip <dannyyip@broadcom.com>
Reviewed-by: Edwin Chan <echan@broadcom.com>
Tested-by: AutoSubmit Status <autosubmit_status_noreply@broadcom.com>

--- a/arch/arm/boot/dts/hawaii_garnet_edn020_4Gb.dts
+++ b/arch/arm/boot/dts/hawaii_garnet_edn020_4Gb.dts
@@ -15,7 +15,7 @@
 
 	memory@81e00000 {
 		device_type = "memory";
-		reg = <0x81e00000 0x20000000>; /* 480 MB */
+		reg = <0x81e00000 0x1e200000>; /* 482 MB */
 	};
 
 	wd-tapper {
