Java TK: update thermal driver for LC1/LC2.
[Defect / Enhancement / New Feature]
MobC00401061

[Problem]
The Java Garnet already updated the thermal driver
to use Linux thermal framework.
Java LC1/LC2 should also follow this.

[Solution]
Enable CONFIG_BCMPMU_CHARGER_COOLANT and
CONFIG_BCMPMU_DIETEMP_THERMAL

[Reviewers]

[Testing]
    [Test Cases]
    boot ok

    [Label/CL# Synced To]
    head

    [Platform]
    Java LC1/LC2

[BROADCOM INTERNAL NOTES]

Change-Id: I384642784f086bea6d6fc3caf3747d1c2ed0efdc
Signed-off-by: qzheng <qzheng@broadcom.com>
Reviewed-on: http://mps-gerrit.broadcom.com/63553
Reviewed-by: Hendry (Hai) Yang <haiyang@broadcom.com>
Reviewed-by: Zhengjun Xing <zxing@broadcom.com>
Branch-Open: Branch Status <branch_status_noreply@broadcom.com>
Reviewed-by: Checkpatch Status <checkpatch_status_noreply@broadcom.com>
Reviewed-by: Commit Description Check <commit_desc_noreply@broadcom.com>
Tested-by: AutoSubmit Status <autosubmit_status_noreply@broadcom.com>

--- a/arch/arm/boot/dts/java_c_lc1.dts
+++ b/arch/arm/boot/dts/java_c_lc1.dts
@@ -3,10 +3,10 @@
 /dts-v1/;
 
 /include/ "java.dtsi"
-/include/ "java_garnet_bcmpmu_edn000.dtsi"
+/include/ "java_bcmpmu_c_lc1.dtsi"
 
 / {
-	model = "Javagarnet C_LC1";
+	model = "Javagarnet C LC1";
 	compatible = "bcm,java";
 
 	chosen {
