[CSP#755552] Kernel instability when using GCC 4.8
Problem:
---------
A data abort is observed in spinlock.h with instruction
ldrex r2,[r4] in arch_spin_lock() where r4 which supposed
to hold address of lock is changed to a value of 0x1 or
0x2 between the call _raw_spin_lock_irqsave() and
arch_spin_lock.
Solution:
---------
The issue with wfe( wait for event) and sev (signal event)
due to timing issues when a core has not finished its
internal states is enhanced in brooks/kivu2 with the new
compiler gcc 4.8.
Based on previous commit:
c4fa34dac90c96b790f5b5b595af09b7bfec328e
fb18bb3cc21796fb0fd92ff9d5a61a22ad57e86d
fd4dc56c11571e1cd0998b6eb5449861a7e58c77
309e1d54d2d55a923408df8ac61f4fe52ade9bdfs
The solution is to enable the compiler flag
CONFIG_USE_JAVA_SPINLOCK which replaces wfe and sev with nops.

Change-Id: Ib1dbf02ef343281a5cc4b134c69630482ee69ea4
Signed-off-by: Nadim Charara <ncharara@broadcom.com>
Reviewed-on: http://mps-gerrit.broadcom.com/63688
Branch-Open: Branch Status <branch_status_noreply@broadcom.com>
Reviewed-by: Checkpatch Status <checkpatch_status_noreply@broadcom.com>
Reviewed-by: Commit Description Check <commit_desc_noreply@broadcom.com>
Reviewed-by: Srivathsa Parthasarathi <parthasa@broadcom.com>
Tested-by: AutoSubmit Status <autosubmit_status_noreply@broadcom.com>

--- a/arch/arm/configs/bcm23550_java_sony_kivu_020_defconfig
+++ b/arch/arm/configs/bcm23550_java_sony_kivu_020_defconfig
@@ -337,7 +337,7 @@ CONFIG_MACH_JAVA_KIVU_020=y
 CONFIG_A7_PLL_PWRDWN_ERRATUM=y
 CONFIG_DORMANT_MODE=y
 CONFIG_DISABLE_USBBOOT_NEXTBOOT=y
-# CONFIG_USE_JAVA_SPINLOCK is not set
+CONFIG_USE_JAVA_SPINLOCK=y
 
 #
 # Broadcom KONA architecture based implementations
