Java TK: keep SD power on during sleep.
[Defect / Enhancement / New Feature]
MobC00401456

[Problem]
Keep SD power on during sleep could save the SD
re-initialization time in waking up.
About 300ms could be saved while less than 300uA
floor current increase.

[Solution]
Set "pm_caps = <1>;" in dts file.

[Reviewers]

[Testing]
    [Test Cases]
    wake up faster

    [Label/CL# Synced To]
    head

    [Platform]
    Java TK

[BROADCOM INTERNAL NOTES]

Change-Id: I534ab20aaa1c9c1050954c793091ede1b3b05f99
Signed-off-by: qzheng <qzheng@broadcom.com>
Reviewed-on: http://mps-gerrit.broadcom.com/63725
Branch-Open: Branch Status <branch_status_noreply@broadcom.com>
Reviewed-by: Checkpatch Status <checkpatch_status_noreply@broadcom.com>
Reviewed-by: Commit Description Check <commit_desc_noreply@broadcom.com>
Reviewed-by: Hendry (Hai) Yang <haiyang@broadcom.com>
Tested-by: AutoSubmit Status <autosubmit_status_noreply@broadcom.com>

--- a/arch/arm/boot/dts/java_c_edn000_2Gb.dts
+++ b/arch/arm/boot/dts/java_c_edn000_2Gb.dts
@@ -572,6 +572,7 @@
 		cd-gpio = <&gpio 91 0>;		/*SD_CARDDET_GPIO_PIN*/
 		devtype = <0>;		/*SDIO_DEV_TYPE_SDMMC*/
 		flags = <2>;		/*REMOVABLE | RPM_EN*/
+		pm_caps = <1>;		/*MMC_PM_KEEP_POWER*/
 		peri-clk-name = "sdio1_clk";
 		ahb-clk-name = "sdio1_ahb_clk";
 		sleep-clk-name = "sdio1_sleep_clk";
