--- a/arch/arm/boot/dts/java_c_lc1.dts
+++ b/arch/arm/boot/dts/java_c_lc1.dts
@@ -462,6 +462,7 @@
 		data-pullup = <0>;
 		devtype = <0>;		/*SDIO_DEV_TYPE_SDMMC*/
 		flags = <2>;		/*REMOVABLE | RPM_EN*/
+		pm_caps = <1>;		/*MMC_PM_KEEP_POWER*/
 		peri-clk-name = "sdio1_clk";
 		ahb-clk-name = "sdio1_ahb_clk";
 		sleep-clk-name = "sdio1_sleep_clk";
