[DTS]: brooks: data irq gpio configuration for bma2xx
Signed-off-by: Aleksej Makarov <aleksej.makarov@sonymobile.com>

--- a/arch/arm/boot/dts/java_sony_brooks.dts
+++ b/arch/arm/boot/dts/java_sony_brooks.dts
@@ -111,6 +111,7 @@
 			compatible = "bcm,bma2xx";
 			reg = <0x18>;
 			gpio-irq-pin = <1>;
+			gpio-data-irq-pin = <4>;
 			orientation = <11>;
 			regulator = "gpldo1_uc";
 		};
