WiFi: p2p connection channel restriction
[Defect / Enhancement / New Feature]
MobC00399801

[Problem]
Cannot join the WFD p2p group

[Solution]
Cherry-picked changes in:
http://mps-gerrit.broadcom.com/63746
Single channel concurrency.

[Testing]
    [Test Cases]
	Build
	Connect AP first and then WFD.
        Connect WFD first and then AP.
    [Label/CL# Synced To]
	HEAD
    [Platform]
	Java
	Hawaii
[BROADCOM INTERNAL NOTES]

Change-Id: I32f333195db2342de34c487be6e9ac3b03f0c496
Signed-off-by: Henry Lien <lienh@broadcom.com>
Reviewed-on: http://mps-gerrit.broadcom.com/64245
Branch-Open: Branch Status <branch_status_noreply@broadcom.com>
Reviewed-by: Checkpatch Status <checkpatch_status_noreply@broadcom.com>
Reviewed-by: Commit Description Check <commit_desc_noreply@broadcom.com>
Reviewed-by: Amit Agarwal <agarwala@broadcom.com>
Reviewed-by: Edwin Chan <echan@broadcom.com>
Tested-by: AutoSubmit Status <autosubmit_status_noreply@broadcom.com>

--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -85,7 +85,7 @@ DHDCFLAGS += -DWL_ENABLE_P2P_IF
 DHDCFLAGS += -DWL_SUPPORT_BACKPORTED_KPATCHES
 # Default definitions for KitKat
 DHDCFLAGS += -DWL_CFG80211_STA_EVENT
-DHDCFLAGS += -DWL_IFACE_COMB_NUM_CHANNELS
+#DHDCFLAGS += -DWL_IFACE_COMB_NUM_CHANNELS
 # To support p2p private command on kernel 3.8 or above
 DHDCFLAGS += -DWL_NEWCFG_PRIVCMD_SUPPORT
 
