Adding new config for Brooks DP2 + clean up
* New DTS, change is PMU register 0x14 for AUXONb
* Removed sony_*.dts to clean up

Change-Id: If837c8c161be8fe69456a762ff8d1a1f211ada9f

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -222,14 +222,13 @@ dtb-$(CONFIG_ARCH_HAWAII) += hawaii_garnet_edn020.dtb \
 	hawaii_ss_heat3g_rev01.dtb
 dtb-$(CONFIG_ARCH_JAVA) += java_edn000.dtb \
 	java_edn000_4Gb.dtb \
-	sony_babble.dtb \
-	sony_brooks.dtb \
 	java_edn000_2Gb.dtb \
 	java_c_edn000_4Gb.dtb \
 	java_c_edn000.dtb \
 	java_c_edn000_2Gb.dtb \
 	java_sony_kivu.dtb \
 	java_sony_brooks.dtb \
+	java_sony_brooks_020.dtb \
 	java_c_lc1.dtb \
 	java_c_lc1_4Gb.dtb \
 	java_c_lc2.dtb \
