--- a/arch/arm/boot/dts/java_sony_brooks_020.dts
+++ b/arch/arm/boot/dts/java_sony_brooks_020.dts
@@ -1,19 +1,21 @@
+/* java_sony_brooks dts file */
+
 /dts-v1/;
 
 /include/ "java.dtsi"
-/include/ "java_sony_bcmpmu_kivu.dtsi"
+/include/ "java_sony_bcmpmu_brooks_020.dtsi"
 
 / {
-	model = "Sony Babble";
+	model = "java_sony_brooks";
 	compatible = "bcm,java";
 
 	chosen {
-		bootargs = "console=ttyS0,115200n8 mem=992M gpt androidboot.console=ttyS0 crash_ramdump=1 logbuf_nocache=1";
+		bootargs = "console=ttyS0,115200n8 mem=480M gpt androidboot.console=ttyS0 crash_ramdump=1 logbuf_nocache=1 vmalloc=136M androidboot.hardware=tetra";
 	};
 
-	memory@82000000 {
+	memory@81e00000{
 		device_type = "memory";
-		reg = <0x82000000 0x3e000000>; /* 992 MB */
+		reg = <0x81e00000 0x1e200000>; /* 482 MB */
 	};
 
 	wd-tapper {
@@ -21,6 +23,19 @@
 		ch-num = <1>; /* Kona hub timer Channel number */
 		timer-name = "aon-timer";
 	};
+
+	usb-phy@0x3F130000 {
+		interrupts = <0 128 0x04>;
+		chipreg-virtual-mem-base = <0x35004000>;
+		usb-ahb-clk-name = "usb_otg_clk";
+		mdio-mstr-clk-name = "mdiomaster";
+	};
+	usb-hsotgctrl@0x3F130000 {
+		chipreg-virtual-mem-base = <0x35004000>;
+		usb-ahb-clk-name = "usb_otg_clk";
+		mdio-mstr-clk-name = "mdiomaster";
+	};
+
 
 	uart@3e000000 {
 		clock-frequency = <26000000>;
@@ -66,9 +81,9 @@
 		fs-ref-frequency = <13000000>;
 		hs-ref-frequency = <104000000>;
 
-		broadcom_nfc@77 {
+		broadcom_nfc@76 {
 			compatible = "bcm,nfc-i2c";
-			reg = <0x77>;
+			reg = <0x76>;
 			wake_gpio = <25>;
 			en_gpio = <100>;
 			irq_gpio = <43>;
@@ -76,6 +91,10 @@
 			enable_rxfifo = <1>;
 		};
 
+		bh1721fvc@23 {
+			compatible = "bcm,bh1721fvc";
+			reg = <0x23>;
+		};
 	};
 
 	i2c2: i2c@3e018000 {
@@ -87,6 +106,16 @@
 		is-pmu-i2c = <0>;
 		fs-ref-frequency = <13000000>;
 		hs-ref-frequency = <104000000>;
+
+		bma2xx@18 {
+			compatible = "bcm,bma2xx";
+			reg = <0x18>;
+			gpio-irq-pin = <1>;
+			gpio-data-irq-pin = <4>;
+			orientation = <11>;
+			regulator = "gpldo1_uc";
+		};
+
 	};
 
 	i2c3: i2c@3e01c000 {
@@ -117,6 +146,19 @@
                 host-wake-gpio = <&gpio 72 0>;
         };
 
+	spi0: spi@0x3E004000 {
+		enable-dma = <1>;
+		cs-line = <1>;
+		mode = <0x23>;
+
+		spidev@0x0 {
+			compatible = "bcm,spidev";
+			reg = <0x0>;
+			spi-max-frequency = <13000000>;
+			spi-loop = <0x20>;
+		};
+	};
+
         bcm-bt-rfkill {
                 compatible = "bcm,bcm-bt-rfkill";
                 bcm-bt-rfkill-vreg-gpio = <&gpio 28 0>;
@@ -133,7 +175,14 @@
 	iovmm_mm: iovmm-mm {
 		compatible = "bcm,iovmm";
 		base = <0x80000000>;
-		size = <0x70000000>;
+		size = <0x30000000>;
+		order = <0>;
+	};
+
+	iovmm_mm_hwwr: iovmm-mm-hwwr {
+		compatible = "bcm,iovmm";
+		base = <0xb0000000>;
+		size = <0x40000000>;
 		order = <0>;
 	};
 
@@ -146,8 +195,9 @@
 
 	ion-config {
 		compatible = "bcm,ion-config";
-		/* No separate mask needed for hwwr if M4U is enabled */
-		mask_hwwr = <0>;
+		/* Workaround: Use a separate iova pool for hwwr buffers */
+		mask_hwwr = <0x4>;
+		mask_256M = <0x221>;
 	};
 
 	ion-system {
@@ -164,6 +214,14 @@
 		type = <0>;
 		iommu = <&iommu_mm>;
 		iovmm = <&iovmm_mm>;
+	};
+
+	ion-system-hwwr {
+		compatible = "bcm,ion";
+		id = <2>;
+		type = <0>;
+		iommu = <&iommu_mm>;
+		iovmm = <&iovmm_mm_hwwr>;
 	};
 
 	ion-carveout {
@@ -216,9 +274,7 @@
 	kona-fb {
 		module-name = "NT35310_Brooks";
 		reg-name = "cam2";
-		detect-gpio = <10>;
-		detect-gpio-val = <0>;
-		rst-gpio = <8>;
+		rst-gpio = <&gpio 2 0>;
 		rst-setup = <2000>;
 		rst-pulse = <11000>;
 		rst-hold = <11000>;
@@ -241,61 +297,6 @@
 		rotation = <0>;
 	};
 
-	kona-fb-2 {
-		module-name = "NT35310_Mesona";
-		reg-name = "cam2";
-		detect-gpio = <10>;
-		detect-gpio-val = <0>;
-		rst-gpio = <8>;
-		rst-setup = <2000>;
-		rst-pulse = <11000>;
-		rst-hold = <11000>;
-		/* rst-active-high; */	/* Commented => Active Low */
-		col-mod-i = <3>;
-		col-mod-o = <3>;
-		width = <320>;
-		height = <480>;
-		/* vmode; */
-		/* vburst; */	/* Non-burst mode */
-		/* te-ctrl; */		/* Tearing Effect Control enabled */
-		fps = <60>;
-		lanes = <1>;
-		/*cmnd-LP;		 Commands in LP mode*/
-		hs-bitrate = <333000000>;	/* bps */
-		lp-bitrate =   <8000000>;	/* bps */
-		desense-offset = <2400000>;  /* +2.4Mbps */
-		iommu = <&iommu_mm>;
-		iovmm = <&iovmm_mm>;
-		rotation = <0>;
-	};
-
-	kona-fb-3 {
-		module-name = "S6D04K2X01";
-		reg-name = "cam2";
-		detect-gpio = <10>;
-		detect-gpio-val = <0>;
-		rst-gpio = <8>;
-		rst-setup = <1000>;
-		rst-pulse = <10000>;
-		rst-hold = <10000>;
-		/* rst-active-high; */	/* Commented => Active Low */
-		col-mod-i = <2>;
-		col-mod-o = <2>;
-		width = <220>;   /*old 280, 176 */
-		height = <176>;
-		/* vmode; */
-		/* vburst; */	/* Non-burst mode */
-		te-ctrl;		/* Tearing Effect Control enabled */
-		fps = <60>;
-		lanes = <1>;
-		/*cmnd-LP;		 Commands in LP mode*/
-		hs-bitrate = <150000000>;	/* bps */
-		lp-bitrate =   <8000000>;	/* bps */
-		desense-offset = <2400000>;  /* +2.4Mbps */
-		iommu = <&iommu_mm>;
-		iovmm = <&iovmm_mm>;
-		rotation = <0>;
-	};
 
 	tmon@0x34008000 {
 		compatible = "bcm,tmon";
@@ -320,6 +321,68 @@
 		tmon_1m_clk = "tmon_1m_clk";
 		falling = <5>; /*fall back temperature offset*/
 	};
+
+    tmon-thermal@0x34008000 {
+        compatible = "bcm,tmon-thermal";
+        reg  = <0x34008000 0x1000>, <0x35004000 0x1000>;
+        interrupts = <0 183 4>;
+        hysteresis = <5>;
+        flags = <5>;
+        interval_ms = <5>;
+        poll_rate_ms = <30000>;
+        tmon_apb_clk = "tmon_apb";
+        tmon_1m_clk = "tmon_1m_clk";
+        shutdown_temp = <120>;
+
+		trip0 {
+			type = "active";
+			temp = <0>;
+			max_freq = <1200000>;
+			max_brightness = <32>;
+		};
+		trip1 {
+			type = "active";
+			temp = <55>;
+			max_freq = <0>;
+			max_brightness = <28>;
+		};
+		trip2 {
+			type = "active";
+			temp = <58>;
+			max_freq = <1200000>;
+			max_brightness = <0>;
+		};
+		trip3 {
+			type = "active";
+			temp = <63>;
+			max_freq = <0>;
+			max_brightness = <25>;
+		};
+		trip4 {
+			type = "active";
+			temp = <65>;
+			max_freq = <800000>;
+			max_brightness = <0>;
+		};
+		trip5 {
+			type = "active";
+			temp = <70>;
+			max_freq = <600000>;
+			max_brightness = <22>;
+		};
+		trip6 {
+			type = "active";
+			temp = <80>;
+			max_freq = <312000>;
+			max_brightness = <0>;
+		};
+		trip7 {
+			type = "critical";
+			temp = <115>;
+			max_freq = <0>;
+			max_brightness = <0>;
+		};
+    };
 
 	memc@35008000 {
 		compatible = "bcm,memc";
@@ -347,6 +410,7 @@
 		is-8bit = <1>;
 		devtype = <2>;		/*SDIO_DEV_TYPE_EMMC*/
 		flags = <1>;		/*KONA_SDIO_FLAGS_DEVICE_NON_REMOVABLE*/
+		pm_caps = <1>;		/*MMC_PM_KEEP_POWER*/
 		peri-clk-name = "sdio2_clk";
 		ahb-clk-name = "sdio2_ahb_clk";
 		sleep-clk-name = "sdio2_sleep_clk";
@@ -368,23 +432,6 @@
 		peri-clk-rate = <48000000>;
 	};
 
-	sdio0 {
-		compatible = "bcm,sdhci";
-		reg = <0x3F180000 10000>;
-		interrupts = <0 77 0x04>;
-		id = <0>;
-		data-pullup = <0>;
-		cd-gpio = <91>;		/*SD_CARDDET_GPIO_PIN*/
-		devtype = <0>;		/*SDIO_DEV_TYPE_SDMMC*/
-		flags = <0>;		/*KONA_SDIO_FLAGS_DEVICE_REMOVABLE*/
-		peri-clk-name = "sdio1_clk";
-		ahb-clk-name = "sdio1_ahb_clk";
-		sleep-clk-name = "sdio1_sleep_clk";
-		peri-clk-rate = <48000000>;
-		vddo-regulator-name = "vdd_sdio";
-		vddsdxc-regulator-name = "vdd_sdxc";
-	};
-
 	timer {
 		compatible = "arm,armv7-timer";
 		interrupts = <1 13 0xf08>,
@@ -395,7 +442,7 @@
 		compatible = "bcm,bcm_wifi";
 		wl-reset-gpio = <3>;
 		host-wake-gpio = <74>;
-		board-nvram-file = "/system/vendor/firmware/fw_wifi_nvram_4330.txt";
+		board-nvram-file = "/system/vendor/firmware/fw_wifi_nvram_43341.txt";
 		module-name = "bcmdhd_4330";
 	};
 
@@ -430,14 +477,15 @@
 		compatible = "bcm,pwm-backlight";
 		reg = <0x0 0x0>;
 		pwm-id = <2>;
-		max-brightness = <32>;	/* Android calibrates to 32 levels */
-		dft-brightness = <32>;
 		polarity = <1>;		/* Inverted polarity */
 		pwm-period-ns = <99900>; /* ~10010 Hz */
 		pwm-request-label = "backlight";
 		bl-on-delay = <7000>;
 		pwm_pin_name = <39>;	/*GPIO24, enum PIN_NAME defined in chip_pinmux.h*/
 		pwm_pin_reboot_func = <25>;	/*GPIO24, enum PIN_FUNC defined in chip_pinmux.h*/
+		brightness-levels = <0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17
+							18 19 20 21 22 23 24 25 26 27 28 29 30 31 32>; /* Android calibrates to 32 levels */
+		default-brightness-level = <32>; /* Array index */
 	};
 
 	gpio-leds {
@@ -459,4 +507,7 @@
 		sec-mem-size = <0x100000>;
 	};
 
+	secure_watchdog {
+		compatible = "bcm,secure_watchdog";
+	};
 };
