Adding Kivu3 configuration to kernel
* Added new defconfig and dts for Kivu 3

Change-Id: I3cc3bb6106d973f25c7c6c1e671978bb96014aaf

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -227,6 +227,7 @@ dtb-$(CONFIG_ARCH_JAVA) += java_edn000.dtb \
 	java_c_edn000.dtb \
 	java_c_edn000_2Gb.dtb \
 	java_sony_kivu.dtb \
+	java_sony_kivu_030.dtb \
 	java_sony_brooks.dtb \
 	java_sony_brooks_020.dtb \
 	java_c_lc1.dtb \
