--- a/arch/arm/mach-java/sony/kivu/Makefile
+++ b/arch/arm/mach-java/sony/kivu/Makefile
@@ -7,3 +7,8 @@ obj-$(CONFIG_INPUT_L3G4200D) += board-kivu-gyro.o
 obj-$(CONFIG_LEDS_LM3530) += board-kivu-backlight.o
 obj-$(CONFIG_SENSORS_BMP18X_I2C) += board-kivu-barometer.o
 obj-$(CONFIG_INPUT_APDS9702) += board-kivu-proximity.o
+#Kivu 3
+obj-$(CONFIG_INPUT_AKM09911) += ../brooks/board-brooks-magnetometer.o
+obj-$(CONFIG_INPUT_BMG160) += ../brooks/board-brooks-gyro.o
+obj-$(CONFIG_BACKLIGHT_LM3630) += ../brooks/board-brooks-backlight.o
+obj-$(CONFIG_SENSORS_BH1721FVC) += ../brooks/board-brooks-als.o
