--- a/arch/arm/mach-java/sony/kivu/Kconfig
+++ b/arch/arm/mach-java/sony/kivu/Kconfig
@@ -13,6 +13,11 @@ choice
 	config MACH_JAVA_KIVU_020
 	bool "JAVA KIVU 020"
 	help
-	  Support for Java Kivu
+	  Support for Java Kivu2.
+
+	config MACH_JAVA_KIVU_030
+	bool "JAVA KIVU 030"
+	help
+	  Support for Java Kivu3.
 
 endchoice
