wifi: fix Wifi issue for Kivu2/Brooks
Update the defconfig files for Kivu2 and Brooks. Also disable the
multiple revision feature which breaks Kivu2/Brooks Wifi.

Change-Id: Idb0e3762196dc8040f1669a32153e8dd64e3b3f9
Signed-off-by: Shawn Zheng <shazheng@broadcom.com>
Reviewed-on: http://mps-gerrit.broadcom.com/64557
Reviewed-by: Babu Arunachalam <babua@broadcom.com>
Reviewed-by: Jean (JinEui) Lee <leej@broadcom.com>
Branch-Open: Branch Status <branch_status_noreply@broadcom.com>
Reviewed-by: Checkpatch Status <checkpatch_status_noreply@broadcom.com>
Reviewed-by: Commit Description Check <commit_desc_noreply@broadcom.com>
Tested-by: AutoSubmit Status <autosubmit_status_noreply@broadcom.com>

--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -68,8 +68,8 @@ DHDCFLAGS += -DCUSTOM_PNO_EVENT_LOCK_xTIME=10
 
 
 
-DHDCFLAGS += -DSUPPORT_MULTIPLE_REVISION
-DHDCFLAGS += -DSUPPORT_MULTIPLE_CHIPS
+#DHDCFLAGS += -DSUPPORT_MULTIPLE_REVISION
+#DHDCFLAGS += -DSUPPORT_MULTIPLE_CHIPS
 
 
 #DHDCFLAGS += -DPLATFORM_MPS -DCUSTOM_OOB_GPIO_NUM=102
