--- a/arch/arm/configs/bcm23550_java_sony_brooks_000_defconfig
+++ b/arch/arm/configs/bcm23550_java_sony_brooks_000_defconfig
@@ -1229,6 +1229,7 @@ CONFIG_RECOVERY=y
 CONFIG_BCM_BT_RFKILL=y
 CONFIG_BCM_BT_LPM=y
 # CONFIG_BCM_BT_GPS_SELFTEST is not set
+# CONFIG_BCM_GPS_KERNEL is not set
 CONFIG_BCM_USERFAULT_HANDLER=y
 CONFIG_STM_TRACE=y
 CONFIG_STM_NUMBER_OF_CHANNEL=256
@@ -1470,11 +1471,18 @@ CONFIG_TARGET_LOCALE_CHN=y
 # CONFIG_ATH_CARDS is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
-# CONFIG_BCMDHD_4334 is not set
-CONFIG_BCM4330=y
+CONFIG_BCMDHD=y
+CONFIG_BCMDHD_GENERIC_CHIP_SUPPORT=y
+# CONFIG_BCM4330 is not set
+# CONFIG_BCM4334 is not set
+# CONFIG_BCM4335 is not set
+# CONFIG_BCM4339 is not set
+# CONFIG_BCM43241 is not set
+# CONFIG_BCM43341 is not set
 CONFIG_BCMDHD_FW_PATH="/system/vendor/firmware/fw_wifi_43341.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/system/vendor/firmware/fw_wifi_nvram_43341.txt"
-# CONFIG_BCMDHD is not set
+# CONFIG_DHD_USE_STATIC_BUF is not set
+# CONFIG_DHD_USE_SCHED_SCAN is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_LIBERTAS is not set
