[arm] brooks: Disable the modem-driver for Brooks
This allows us to run the enterlowpowermode.sh script _after_
boot to allow the system to enter a low power mode...

Change-Id: Ia0d7d74b97159671275cc8a77e899d36f3515e31

--- a/arch/arm/configs/bcm23550_java_sony_brooks_000_defconfig
+++ b/arch/arm/configs/bcm23550_java_sony_brooks_000_defconfig
@@ -40,24 +40,7 @@ CONFIG_PI_MGR_MM_STURBO_ENABLE=y
 CONFIG_MM_312M_SOURCE_CLK=y
 CONFIG_HAWAII_PTM=y
 CONFIG_MACH_JAVA_SONY=y
-CONFIG_BRD_NAME="java"
-
-#
-# Java SoC based Machine types
-#
-# CONFIG_MACH_JAVA_FPGA is not set
-# CONFIG_MACH_JAVA_FPGA_E is not set
-# CONFIG_MACH_JAVA_RAY is not set
-# CONFIG_MACH_JAVA_STONE is not set
-# CONFIG_MACH_JAVA_GARNET is not set
-# CONFIG_MACH_JAVA_KIVU is not set
 CONFIG_MACH_JAVA_BROOKS=y
-# CONFIG_MACH_JAVA_SS_EVAL is not set
-# CONFIG_MACH_JAVA_SS_VICTOR3G is not set
-# CONFIG_MACH_JAVA_SS_BAFFINLITE is not set
-CONFIG_MACH_JAVA_BROOKS_000=y
-# CONFIG_MOVE_MM_CLK_TO_PLL0 is not set
-CONFIG_A7_PLL_PWRDWN_ERRATUM=y
 CONFIG_DORMANT_MODE=y
 CONFIG_ARCH_JAVA=y
 CONFIG_DMAC_PL330=y
@@ -81,33 +64,6 @@ CONFIG_KONA_ATAG_DT_DTS_FILE="Java"
 CONFIG_PROC_PINMUX_DUMP=y
 CONFIG_KONA_PROFILER=y
 CONFIG_KONA_AXITRACE=y
-# CONFIG_LPDDR_DEV_TEMP is not set
-# CONFIG_PLAT_SPEAR is not set
-
-#
-# Processor Type
-#
-CONFIG_CPU_V7=y
-CONFIG_CPU_32v6K=y
-CONFIG_CPU_32v7=y
-CONFIG_CPU_ABRT_EV7=y
-CONFIG_CPU_PABRT_V7=y
-CONFIG_CPU_CACHE_V7=y
-CONFIG_CPU_CACHE_VIPT=y
-CONFIG_CPU_COPY_V6=y
-CONFIG_CPU_TLB_V7=y
-CONFIG_CPU_HAS_ASID=y
-CONFIG_CPU_CP15=y
-CONFIG_CPU_CP15_MMU=y
-
-#
-# Processor Features
-#
-# CONFIG_ARM_LPAE is not set
-# CONFIG_ARCH_PHYS_ADDR_T_64BIT is not set
-CONFIG_ARM_THUMB=y
-# CONFIG_ARM_THUMBEE is not set
-# CONFIG_ARM_VIRT_EXT is not set
 # CONFIG_SWP_EMULATE is not set
 # CONFIG_CACHE_L2X0 is not set
 CONFIG_ARM_ERRATA_743622=y
@@ -342,6 +298,7 @@ CONFIG_SERIAL_8250_DW=y
 # CONFIG_HW_RANDOM is not set
 CONFIG_BRCM_CHAR_DRIVERS=y
 CONFIG_VCE=y
+CONFIG_BRCM_FUSE_LOG=y
 CONFIG_ISP=y
 CONFIG_ISP2=y
 CONFIG_JPEGENC=y
@@ -351,8 +308,6 @@ CONFIG_BCMPMU_RPC=y
 # CONFIG_BCM_AP_PANIC_ON_CPCRASH is not set
 CONFIG_HAWAII_MM=y
 CONFIG_HAWAII_MM_H264=y
-CONFIG_BCM_MODEM=y
-CONFIG_BRCM_FUSE_VSP=y
 CONFIG_GPS_IRQ=y
 CONFIG_BCM_LOGRAM_HELPER=y
 CONFIG_I2C=y
